--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 gtk = { version = "0.4.6", package = "gtk4" }
+once_cell = "1.9.0"
 reqwest = {version = "0.11.9", features = ["blocking", "json"]}
 serde = {version = "1.0.136", features = ["derive"] }
 serde_json = "1.0.79"
