--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,10 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+clap = "3.1.0"
+gatekeeper-members = "0.1.1"
 gtk = { version = "0.4.6", package = "gtk4" }
+libgatekeeper-sys = "0.2.1"
 once_cell = "1.9.0"
 reqwest = {version = "0.11.9", features = ["blocking", "json"]}
 serde = {version = "1.0.136", features = ["derive"] }
