--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ gatekeeper-members = "0.1.2"
 gtk = { version = "0.4.6", package = "gtk4" }
 libgatekeeper-sys = "0.2.1"
 once_cell = "1.9.0"
+pango = "0.15.6"
 reqwest = {version = "0.11.9", features = ["blocking", "json"]}
 serde = {version = "1.0.136", features = ["derive"] }
 serde_json = "1.0.79"
